--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^3.12.1",
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "graphql": "^16.8.0",
     "mongoose": "^7.5.0"
