--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "crypto-browserify": "^3.12.0",
     "framer-motion": "^10.16.4",
     "jwt-decode": "^3.1.2",
+    "localizer": "^0.2.4",
+    "mapbox-gl": "^2.15.0",
+    "moment": "^2.29.4",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.2",
     "react-dom": "^18.2.0",
+    "react-map-gl": "^7.1.5",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1"
   },
