--- a/client/.gitignore
+++ b/client/.gitignore
@@ -17,9 +17,22 @@
 .env.development.local
 .env.test.local
 .env.production.local
-
+.idea/
+.vscode/
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*.log
+*.log.*
+logs/
+temp/
 
+# Dependency Management Configuration
+.npmrc
+.yarnrc
+
+#IDE/Editor Configuration Files:
+.editorconfig
+.eslintrc
+.prettierrc
