--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "concurrently": "^8.2.1"
   },
   "dependencies": {
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "sass": "^1.67.0"
   }
 }
