--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001",
+  "proxy": "http://localhost:3001/graphql",
   "dependencies": {
     "@apollo/client": "^3.8.3",
     "@nextui-org/react": "^2.1.10",
