--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,6 @@
     "framer-motion": "^10.16.4",
     "jwt-decode": "^3.1.2",
     "localizer": "^0.2.4",
-    "mapbox-gl": "^2.15.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.2",
@@ -27,15 +26,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest",
-      "plugin:storybook/recommended"
+      "react-app/jest"
     ]
   },
   "browserslist": {
@@ -51,22 +47,12 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.4.1",
-    "@storybook/addon-interactions": "^7.4.1",
-    "@storybook/addon-links": "^7.4.1",
-    "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/blocks": "^7.4.1",
-    "@storybook/preset-create-react-app": "^7.4.1",
-    "@storybook/react": "^7.4.1",
-    "@storybook/react-webpack5": "^7.4.1",
-    "@storybook/testing-library": "^0.2.0",
     "@tailwindcss/forms": "^0.5.6",
     "autoprefixer": "^10.4.15",
     "babel-plugin-named-exports-order": "^0.0.2",
     "eslint-plugin-storybook": "^0.6.13",
     "postcss": "^8.4.29",
     "prop-types": "^15.8.1",
-    "storybook": "^7.4.1",
     "tailwindcss": "^3.3.3",
     "webpack": "^5.88.2"
   }
