--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^8.2.1"
+    "concurrently": "^8.2.1",
+    "postcss": "^8.4.29",
+    "postcss-import": "^15.1.0",
+    "postcss-preset-env": "^9.1.3",
+    "postcss-simple-vars": "^7.0.1"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
