--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "sass": "^1.67.0"
-  }
+  },
+   "engines": {
+        "node": "10.16.0"
+    }
+  
 }
