--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,7 @@
     "@nextui-org/react": "^2.1.10",
     "@stripe/react-stripe-js": "^2.2.0",
     "@stripe/stripe-js": "^2.1.3",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    
     "framer-motion": "^10.16.4",
     "jwt-decode": "^3.1.2",
     "localizer": "^0.2.4",
@@ -30,8 +28,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
