--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "sass": "^1.67.0"
-  }
+  },
   
+  "engines": {
+    "node": "18.x"
+  }
+
+
 }
