--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,15 @@
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.1.5",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "@tailwindcss/forms": "^0.5.6",
+    "autoprefixer": "^10.4.15",
+    "babel-plugin-named-exports-order": "^0.0.2",
+    "eslint-plugin-storybook": "^0.6.13",
+    "postcss": "^8.4.29",
+    "prop-types": "^15.8.1",
+    "tailwindcss": "^3.3.3",
+    "webpack": "^5.88.2"
   },
   "scripts": {
     "start": "react-scripts start",
